added more designs

--- a/Dictionary_App/index.html
+++ b/Dictionary_App/index.html
@@ -13,8 +13,9 @@
       <input type="text" class="input" id="input" placeholder="Search a word" />
       <p class="info-text" id="info-text">Type a word and press enter</p>
       <div class="meaning-container" id="meaning-container">
-        <p>Word Title: <span class="title" id="title">_____</span></p>
-        <p>Meaning: <span class="meaning" id="meaning">_____</span></p>
+        <p class="extra">Word Title: <span class="title" id="title">_____</span></p>
+        <p class="extra">Meaning: <span class="meaning" id="meaning">_____</span></p>
+        <p class="extra">Link: <span id="link">_____</span></p>
         <audio src="" controls id="audio"></audio>
       </div>
     </div>
