media query added for responsiveness

--- a/Dictionary_App/index.html
+++ b/Dictionary_App/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="container">
       <h1 class="heading">English Dictionary</h1>
-      <input type="text" class="input" id="input" placeholder="Search a word" />
+      <div class="search-bar">
+        <input type="text" class="input" id="input" placeholder="Search a word" />
+      </div>
       <p class="info-text" id="info-text">Type a word and press enter</p>
       <div class="meaning-container" id="meaning-container">
         <p class="extra">Word Title: <span class="title" id="title">_____</span></p>
