--- a/Dictionary_App/index.html
+++ b/Dictionary_App/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English Dictionary</title>
+    <link rel="icon" type="image/x-icon" href="/Dictionary_App/public/dictionary.png">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
