tour&travel favicon

--- a/Tour-Project-main/index.html
+++ b/Tour-Project-main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour & Travel</title>
+    <link rel="icon" type="image/x-icon" href="/Tour-Project-main/images/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- Iconscout Link  -->
