placeholder wording changed

--- a/Dictionary_App/index.html
+++ b/Dictionary_App/index.html
@@ -22,7 +22,7 @@
           type="text"
           class="input"
           id="input"
-          placeholder="Search a word"
+          placeholder="Search for meaning"
         />
       </div>
       <p class="info-text" id="info-text">Type a word and press enter</p>
