footer section added

--- a/Dictionary_App/index.html
+++ b/Dictionary_App/index.html
@@ -37,6 +37,9 @@
         <audio src="" controls id="audio"></audio>
       </div>
     </div>
+    <footer>
+      <center>2023 &copy English Dictionary</center>
+    </footer>
 
     <script src="script.js"></script>
   </body>
