--- a/Grocery-Store-main/index.html
+++ b/Grocery-Store-main/index.html
@@ -1,102 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grocery Store</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <!-- ... (your existing head content) ... -->
 </head>
 <body>
     <header class="header">
-    <!--Header Section-->
-    <a href="#" class="logo"><i class="fas fa-shopping-basket"></i>Groco</a>
-    <nav class="navbar">
-        <a href="#home">Home</a>
-        <a href="#features">Features</a>
-        <a href="#products">Products</a>
-        <a href="#categories">Categories</a>
-        <a href="#review">Review</a>
-        <a href="#blog">Blog</a>
-    </nav>
+        <!-- ... (your existing header content) ... -->
+    </header>
 
-    <div class="icons">
-       <div class="fas fa-bars" id="menu-btn"></div>
-       <div class="fas fa-search" id="search-btn"></div>
-       <div class="fas fa-shopping-cart" id="cart-btn"></div>
-       <div class="fas fa-user" id="login-btn"></div>
- 
-    </div>
-
-    <form action="" class="search-form">
-        <input type="search" id="search-box" placeholder="Search here..">
-        <label for="search-box" class="fas fa-search"></label>
-    </form>
-
-    <div class="shopping-cart">
-        <div class="box">
-            <i class="fas fa-trash"></i>
-            <img src="images/cart1.png">
-            <div class="content">
-                <h3>Watermelon</h3>
-                <span class="price">$4.99/-</span>
-                <span class="quantity">qty : 1</span>
-            </div>
-        </div>
-        <div class="box">
-            <i class="fas fa-trash"></i>
-            <img src="images/cart2.png">
-            <div class="content">
-                <h3>Onion</h3>
-                <span class="price">$4.99/-</span>
-                <span class="quantity">qty : 1</span>
-            </div>
-        </div>
-        <div class="box">
-            <i class="fas fa-trash"></i>
-            <img src="images/cart3.png">
-            <div class="content">
-                <h3>Chicken</h3>
-                <span class="price">$4.99/-</span>
-                <span class="quantity">qty : 1</span>
-            </div>
-        </div>
-        <div class="total">total : $19.69/-</div>
-        <a href="#" class="btn">Check out</a>
-    </div>
-
-    <form action="" class="login-form">
-        <h3>Login Now</h3>
-        <input type="email" placeholder="your email" class="box">
-        <input type="password" placeholder="your password" class="box">
-        <p>forget your password <a href="#">click Here</a></p>
-        <p>don't have an account <a href="#">create now</a></p>
-        <input type="submit" value="login now" class="btn">
-    </form>
-</header>
-    <!--header Section end-->
-
-    <!--home section-->
+    <!-- Existing content (home section) -->
     <section class="home" id="home">
-        <div class="content">
-            <h3>Fresh and <span>organic </span>products for your</h3>
-            <p>Lorem ipsum sut amet consectuetur adipsicing elit. Aliquam libero nostrum
-                veniam facere temopore nisi..</p>
-                <a href="#" class="btn">shop now</a>
-                
-        </div>
-
-
-
+        <!-- ... (your existing home section content) ... -->
     </section>
-    <!--home section-end-->
 
+    <!-- Featured Products Section (new content) -->
+    <section class="featured-products" id="featured-products">
+        <div class="container">
+            <h2>Featured Products</h2>
+            <div class="product">
+                <img src="images/product1.jpg" alt="Product 1">
+                <h3>Organic Apples</h3>
+                <span class="price">$2.99/lb</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </div>
+            <div class="product">
+                <img src="images/product2.jpg" alt="Product 2">
+                <h3>Fresh Tomatoes</h3>
+                <span class="price">$1.99/lb</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </div>
+            <div class="product">
+                <img src="images/product3.jpg" alt="Product 3">
+                <h3>Organic Carrots</h3>
+                <span class="price">$2.49/lb</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </div>
+            <div class="product">
+                <img src="images/product4.jpg" alt="Product 4">
+                <h3>Fresh Strawberries</h3>
+                <span class="price">$3.99/lb</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </div>
+        </div>
+    </section>
 
-
-
-
-
-    <script src="script.js"></script>
+    <!-- ... (your existing script tags and closing body/html tags) ... -->
 </body>
 </html>
