--- a/Dictionary_App/index.html
+++ b/Dictionary_App/index.html
@@ -38,7 +38,8 @@
       </div>
     </div>
     <footer>
-      <center>2023 &copy English Dictionary</center>
+      <center><script>document.write( new Date().getFullYear() );</script>&copy English Dictionary</center>
+      <!-- <center>2023 &copy English Dictionary</center> -->
     </footer>
 
     <script src="script.js"></script>
