--- a/Grocery-Store-main/index.html
+++ b/Grocery-Store-main/index.html
@@ -18,30 +18,31 @@
         <div class="container">
             <h2>Featured Products</h2>
             <div class="product">
-                <img src="images/product1.jpg" alt="Product 1">
+                <img src="images/cart1.png" alt="Product 1" style="width: 100px; height: 100px;">
                 <h3>Organic Apples</h3>
                 <span class="price">$2.99/lb</span>
                 <a href="#" class="btn">Add to Cart</a>
             </div>
             <div class="product">
-                <img src="images/product2.jpg" alt="Product 2">
+                <img src="images/cart2.png" alt="Product 2" style="width: 100px; height: 100px;">
                 <h3>Fresh Tomatoes</h3>
                 <span class="price">$1.99/lb</span>
                 <a href="#" class="btn">Add to Cart</a>
             </div>
             <div class="product">
-                <img src="images/product3.jpg" alt="Product 3">
+                <img src="images/cart3.png" alt="Product 3" style="width: 100px; height: 100px;">
                 <h3>Organic Carrots</h3>
                 <span class="price">$2.49/lb</span>
                 <a href="#" class="btn">Add to Cart</a>
             </div>
             <div class="product">
-                <img src="images/product4.jpg" alt="Product 4">
+                <img src="images/product4.jpg" alt="Product 4" style="width: 100px; height: 100px;">
                 <h3>Fresh Strawberries</h3>
                 <span class="price">$3.99/lb</span>
                 <a href="#" class="btn">Add to Cart</a>
             </div>
         </div>
+        
     </section>
 
     <!-- ... (your existing script tags and closing body/html tags) ... -->
