--- a/Tour-Project-main/index.html
+++ b/Tour-Project-main/index.html
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/x-icon" href="/Tour-Project-main/images/logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Improve SEO -->
+    <meta name="description" content="Explore the best adventure travel experiences with Travel.com. Discover exciting destinations, packages, and more.">
+
     <!-- Iconscout Link  -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
 
