UI changes for tour project and phone website

--- a/phone_website-master/index.html
+++ b/phone_website-master/index.html
@@ -152,7 +152,7 @@
         <input type="password" placeholder="your password" class="box">
         <p>forget your password <a href="#">Click Here</a></p>
         <p>don't have an account <a href="#">Create now</a></p>
-        <input type="submit" value="Login now" class="btn">
+        <button type="submit" class="auth_btn">Login Now</button>
       </form>
       </div>
       <div class="searchF">
