Added Dark Mode feature
Dark mode feature in English Dictionary, because sometimes random background pic matching with font colors which makes its look bad.

--- a/Dictionary_App/index.html
+++ b/Dictionary_App/index.html
@@ -13,10 +13,18 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Poppins:wght@300&family=Roboto:wght@700&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="heading">English Dictionary</h1>
+      
+
+    </head>
+    <body>
+      <div class="container">
+        <h1 class="heading">English Dictionary</h1>
+        <!-- Add dark mode this button within your .container -->
+        <button id="dark-mode-toggle" class="dark-mode-toggle"><i class="fas fa-moon fa-2x"></i></button> 
+        <div class="search-icon">
+          <i class="fas fa-search"></i>
+        </div>
+
       <div class="search-bar">
         <input
           type="text"
