Connected HTML to JS and CSS file. Added product image

--- a/Grocery-Store-main/index.html
+++ b/Grocery-Store-main/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- ... (your existing head content) ... -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
@@ -36,7 +36,7 @@
                 <a href="#" class="btn">Add to Cart</a>
             </div>
             <div class="product">
-                <img src="images/product4.jpg" alt="Product 4" style="width: 100px; height: 100px;">
+                <img src="images/item4.jpg" alt="Product 4" style="width: 100px; height: 100px;">
                 <h3>Fresh Strawberries</h3>
                 <span class="price">$3.99/lb</span>
                 <a href="#" class="btn">Add to Cart</a>
@@ -46,5 +46,7 @@
     </section>
 
     <!-- ... (your existing script tags and closing body/html tags) ... -->
+
+    <script src="script.js"></script>
 </body>
 </html>
