--- a/Grocery-Store-main/index.html
+++ b/Grocery-Store-main/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header class="header">
-        <!-- ... (your existing header content) ... -->
+        
     </header>
 
     <!-- Existing content (home section) -->
@@ -15,8 +15,8 @@
 
     <!-- Featured Products Section (new content) -->
     <section class="featured-products" id="featured-products">
+        <h2>Featured Products</h2>
         <div class="container">
-            <h2>Featured Products</h2>
             <div class="product">
                 <img src="images/cart1.png" alt="Product 1" style="width: 100px; height: 100px;">
                 <h3>Organic Apples</h3>
@@ -39,6 +39,18 @@
                 <img src="images/item4.jpg" alt="Product 4" style="width: 100px; height: 100px;">
                 <h3>Fresh Strawberries</h3>
                 <span class="price">$3.99/lb</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </div>
+            <div class="product">
+                <img src="images/item5.jpg" alt="Product 4" style="width: 100px; height: 100px;">
+                <h3>Coconut</h3>
+                <span class="price">$2.50/lb</span>
+                <a href="#" class="btn">Add to Cart</a>
+            </div>
+            <div class="product">
+                <img src="images/item6.jpg" alt="Product 4" style="width: 100px; height: 100px;">
+                <h3>Fresh Strawberries</h3>
+                <span class="price">$1.99/lb</span>
                 <a href="#" class="btn">Add to Cart</a>
             </div>
         </div>
