--- a/Grocery-Store-main/index.html
+++ b/Grocery-Store-main/index.html
@@ -2,15 +2,28 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Josefin+Sans:ital,wght@0,300;0,400;0,700;1,300&family=Roboto+Mono:wght@400;500&family=Roboto+Slab:wght@300;400;500;600&family=Young+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        
+        <div class="leftSection">
+            <div>
+                <img class="logo" src="images/logo.png" alt="storeLogo">
+            </div>
+        </div>
+        <div class="rightSection">
+            <div class="homeManu navButton">Home</div>
+            <div class="vege navButton">Vegetables</div>
+            <div class="fruits navButton">Fruits</div>
+            <div class="cart navButton">Cart</div>
+        </div>
     </header>
 
     <!-- Existing content (home section) -->
     <section class="home" id="home">
-        <!-- ... (your existing home section content) ... -->
+        <p class="storeName">GroceryGalaxy.com</p>
     </section>
 
     <!-- Featured Products Section (new content) -->
