Add fast-loading, responsive background image and 'Favorites' feature

--- a/Dictionary_App/index.html
+++ b/Dictionary_App/index.html
@@ -35,12 +35,16 @@
         </p>
         <p class="extra">Link: <span id="link">_____</span></p>
         <audio src="" controls id="audio"></audio>
+        <br>
+        <button class="favorite-button" id="favorite-button">Add to Favorites</button>
+      </div>
+      <div class="favorites-container" id="favorites-container">
+        <h2>Favorites</h2>
+        <ul id="favorites-list"></ul>
       </div>
     </div>
     <footer>
       <center><script>document.write( new Date().getFullYear() );</script>&copy English Dictionary</center>
-      <!-- <center>2023 &copy English Dictionary</center> -->
-    </footer>
 
     <script src="script.js"></script>
   </body>
