--- a/sanket.html
+++ b/sanket.html
@@ -198,7 +198,7 @@
       </nav>
 
       <div class="orange-rectangle">
-        Hey, this is Home Harvest Hub
+        Hey, this is TinyBloomers
     </div>
       <div class="container">
         <img src="https://img.freepik.com/premium-vector/tree-grow-plant-growth-from-seed-sapling-with-green-leaf-stages-seedling-growing-trees-soil-gardening-process-vector-concept-eco-botanical-cultivation-green-foliage_102902-4407.jpg"> 
