--- a/Birthday-card.html
+++ b/Birthday-card.html
@@ -10,7 +10,7 @@
 <body>
     <div class="birthdayCard">
         <div class="cardFront">
-            <h3 class="happy">HAPPY BIRTHDAY Friend</h3>
+            <h3 class="happy">HAPPY BIRTHDAY BEST FRIEND</h3>
         <div class="balloons">
           <div class="balloonOne"></div>
           <div class="balloonTwo"></div>
