--- a/Birthday-card.html
+++ b/Birthday-card.html
@@ -11,6 +11,7 @@
     <div class="birthdayCard">
         <div class="cardFront">
             <h3 class="happy">HAPPY BIRTHDAY Friend</h3>
+            <h3 class="happy">HAPPY BIRTHDAY Friend</h3>
         <div class="balloons">
           <div class="balloonOne"></div>
           <div class="balloonTwo"></div>
